# ising

./: .gitignore  README.md
ana/: plot.py
benchmark/: run-sim.py
comparison/: README.md
comparison/benchmark/: plot.py  run-sim.py
comparison/cpp/: ising.cpp
comparison/python/: README.md  ising.py
comparison/rust/: Cargo.toml
comparison/rust/src/: main.rs
cpp/: CMakeLists.txt  README.md  ising.cpp
cpp/base/: ising.cpp
cpp/dim-1/: CMakeLists.txt  ising1d.cpp
cpp/dim-n/: CMakeLists.txt  arithmetic.hpp  configuration.hpp  fileio.cpp  fileio.hpp  input.yml  ising.hpp  lattice.cpp  lattice.hpp  main.cpp  montecarlo.cpp  montecarlo.hpp  rng.hpp
cpp/dim-n/test/: CMakeLists.txt  fileio.cpp  ising.cpp  rng.cpp  util.hpp
cpp/dim-n/test/input/: invalidInput0.yml
n-dimensional/: CMakeLists.txt  README.md  configuration.hpp  input.yml  ising.hpp  lattice.cpp
n-dimensional/ana/: anim.py  fileio.py  plot.py
n-dimensional/src/: CMakeLists.txt  arithmetic.hpp  configuration.hpp  fileio.cpp  fileio.hpp  index.hpp  lattice.cpp  lattice.hpp  main.cpp  montecarlo.cpp  montecarlo.hpp  ndebug.hpp
n-dimensional/test/: CMakeLists.txt  fileio.cpp  ising.cpp  lattice.cpp
n-dimensional/test/input/: invalidInput0.yml  invalidInput1.yml  validInput0.yml  validInput1.yml
python/: ising.py
rust/: README.md
rust/src/: main.rs
